# wordterm

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  test.rs  word.rs
