[package]
name = "wordterm"
version = "0.2.1"
edition = "2024"

[dependencies]
anstream = "0.6.19"
anstyle = "1.0.11"
time = { version = "0.3.41", features = ["local-offset"] }
reqwest = { version = "0.12.22", features = ["json", "charset", "blocking"] }
serde_json = "1.0.141"

[profile.release]
strip = true
opt-level = "s"